feat: custom native library path support using panvpx.libvpx.path